@@ -6,7 +6,6 @@ import androidx.compose.runtime.CompositionLocalProvider
 import androidx.compose.ui.Modifier
 import cafe.adriel.voyager.navigator.Navigator
 import cafe.adriel.voyager.transitions.SlideTransition
-import domain.initKoin
 import org.jetbrains.compose.ui.tooling.preview.Preview
 import presentation.screens.tutorial.home.HomeScreen
 import presentation.style.DarkThemeCompositionLocal
@@ -17,8 +16,6 @@ import presentation.style.isDark
 @Composable
 @Preview
 fun App() {
-    initKoin()
-
     CompositionLocalProvider(DarkThemeCompositionLocal provides isDark()) {
         MainTheme {
             Surface(modifier = Modifier.fillMaxSize().dimIfDarkMode()) {
